<resources>
    <string name="app_name">Anda Tahes</string>
    <string name="judul">Anda Tahes?</string>
    <string name="usia">Usia</string>
    <string name="berat_badan">Berat Badan (kg)</string>
    <string name="tinggi_badan">Tinggi Badan (cm)</string>
    <string name="label_btn">Uji Tahesmu</string>
    <string name="kembali">Kembali</string>
    <string name="nama">Nama</string>
    <string name="keluar">Keluar</string>
    <string name="who_status">Status tubuh anda menurut WHO</string>
    <string name="status_asian">Status tubuh anda menurut Asian Health Care</string>
</resources>